[package]
name = "dotmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nom = "7.1.3"
unicode-normalization = "0.1.22"
wasm-bindgen = "0.2.86"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
