[package]
name = "maspace"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.71"
nom = "7.1.3"
unicode-normalization = "0.1.22"
wasm-bindgen = "0.2.86"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[features]
default = ["wee_alloc"]
